2011-9-15 22:25 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.24
correct the wrong name mGameSate to mGameState in Perception.*
2011-9-15_12:32 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.23-25
change build.sh to build-agent.sh
remove "RedSun" in some scripts
change TeamPlayer.cpp, if gameover it still playPlayOn
delete CNChangeLog
2011-9-11 23:54 Duan Pengfei<bestdpf@gmail.com>
version seu3d-1.0.22
fix a bug that percetion is dropped because of the wrong code:
about the bug:
err output is :
[think thread] the perception @ .. is dropped!
in the updatePerception() of WorldModel.cpp, I change the value from
sim_time/2 to sim_time/1000;
but I also find some new bugs, please take care:
the game mode is changing wrongly and some agent goes to game over mode!
I don't know whether it is because this change, please take care of this
change!
If it comes from this change, then:
the server may send error infomation to us, especially the game mode.
After this change, our agents can kick farther than before.
2011-9-11 17:31 Duan Pengfei<bestdpf@gmail.com>
fix the bug that perception is dropped when the hardware is not very good!
about the bug:
err output is :
[Warning] the perception @ .. is dropped!
the method is that:
let the sense thread wait for think thread if the think thread is slower than
sense thread.
the code is for tmp use, I will rewrite it later.
Please downlaod it and test it.
there are still problems or bugs with output:
[think thread] the perception @ .. is dropped!
2011-9-7_11:43 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.20
add build.sh
2011-9-5_11:30 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.19
change start.sh
2011-9-5_9:28 Zhao Bolu<zhaobl880704@gmail.com>
change files so that it could run in 5Vs5
2011-9-4_22:34 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.17 
clear Player TeamPlayer
2011-9-4_21:30 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.16
clear output
Player 
2011-9-4 3:19pm Duan Pengfei<bestdpf@gmail.com>